--- a/HTML5-CSS3/H03/style.css
+++ b/HTML5-CSS3/H03/style.css
@@ -28,25 +28,23 @@ nav a{
 }
 .content{
     line-height: 1.5;
-    padding: 0 25px;
     margin: 20px;
+    color: rgb(63, 63, 63);
+    padding: 0 45px;
 }
 .content hr{
-    margin-left: 45px;
+    margin-top: 15px;
     margin-bottom: 15px;
     max-width: 100%;
 }
-.content h3{
-    color: rgb(63, 63, 63);
-    padding-left: 45px;
-    margin-bottom: 15px;
+.content ul{
+    margin-left: 35px;
 }
-.content li{
-    padding-left: 65px;
+.content h3{
+    margin-bottom: 15px;
 }
 .content img{
     max-width: 100%;
-    padding: 0 45px;
 }
 div footer {
     padding: 30px;
