--- a/HTML5-CSS3/CSS_hindeline03/style.css
+++ b/HTML5-CSS3/CSS_hindeline03/style.css
@@ -8,8 +8,9 @@ h4, h1, h3 {
     font-weight: normal;
 }
 
+
 header {
-    background-image:url(img.png);
+    /* background-image:url(img.png); */
     height: 400px;
     color: white;
     container: flex;
@@ -74,6 +75,60 @@ nav a {
 p {
     color: gray;
 }
+
+canvas {
+    display: block;
+    vertical-align: bottom;
+  }
+  
+  /* ---- particles.js container ---- */
+  
+    #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #2319b6;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+  
+  /* ---- stats.js ---- */
+  
+  .count-particles{
+    background: #000022;
+    position: absolute;
+    top: 48px;
+    left: 0;
+    width: 80px;
+    color: #13E8E9;
+    font-size: .8em;
+    text-align: left;
+    text-indent: 4px;
+    line-height: 14px;
+    padding-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+  }
+  
+  .js-count-particles{
+    font-size: 1.1em;
+  }
+  
+  #stats,
+  .count-particles{
+    -webkit-user-select: none;
+  }
+  
+  #stats{
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
+  }
+  
+  .count-particles{
+    border-radius: 0 0 3px 3px;
+  }
 
 footer {
     text-align: center;
