--- a/HTML5-CSS3/htmlcssnr2/style.css
+++ b/HTML5-CSS3/htmlcssnr2/style.css
@@ -3,7 +3,8 @@
 }
 
 header {
-    background-image: url("background.png");
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     color:white;
     text-align: center;
     height: 480px;
