--- a/PHP/Sporditarvetepood/css/index.css
+++ b/PHP/Sporditarvetepood/css/index.css
@@ -4,3 +4,13 @@
 .copyright {
     background-color: rgba(0, 0, 0, 0.2);
 }
+#sidebar { 
+    min-height: 100vh; background-color: #343a40; 
+} 
+#sidebar .nav-link 
+{ 
+    color: #ddd; 
+} 
+#sidebar .nav-link.active { 
+    background-color: #495057; color: #fff; 
+}
